--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@midwayjs/cross-domain": "^3.3.11",
     "@midwayjs/decorator": "^3.0.0",
     "@midwayjs/faas": "^3.0.0",
+    "@midwayjs/logger": "^3.3.0",
     "@midwayjs/orm": "^3.1.1",
     "@midwayjs/serverless-fc-starter": "^3.0.2",
     "@midwayjs/serverless-fc-trigger": "^3.0.2",
